paperless-ai/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ai
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - paperless-ai.local.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: paperless-ai.local.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ai-service
                port:
                  number: 3000
